vlib/v/checker/tests/any_type_err.vv
// Any types should error, while parametrically polymorphic should not.

type AnyType = any
type AnySumType = any | string
type AnyPolySumType = T | any

type PolyType = T
type PolySumType = T | string

struct AnyStructField[T] {
	foo any
	bar T
}

fn any_cast() {
	_ := any('foo')
}
